# Helbling_STARTHACK25_Sonetto

./: .gitignore  pyproject.toml
frontend/src/app/api/: socket.js
frontend/src/app/customers/[customer_id]/: page.tsx
src/: azure_api_example.py  diarizer.py  groq_api_example.py  preprocess.py  relay.py
src/memory_module/: recommender.py  summarize.py
src/voice_id/: diarizer.py
